--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -1,8 +1,8 @@
 {% load otree_tags %}
 <div class="box effect7">
-    <h4>Instructions</h4>
+    <h4>Istruzioni</h4>
     {% block instructions %}{% endblock %}
     <p>
-    For your convenience, these instructions will remain available to you on all subsequent screens of this study.
+    Per comodità queste istruzioni rimarranno disponibili in tutte le successive schermate.
     </p>
 </div>
