--- a/_templates/global/Introduction.html
+++ b/_templates/global/Introduction.html
@@ -1,12 +1,12 @@
 {% extends "global/Base.html" %}
 {% load otree_tags %}
 
-{% block title %}Introduction{% endblock %}
+{% block title %}Introduzione{% endblock %}
 
 {% block content %}
 {% include instructions %}
 <p>
-On the next page, you will have to answer one question to make sure you understand the instructions correctly.
+<!--Sulla prossima pagina dovrai rispondere ad una domanda, per controllare che tu abbia compreso correttamente le istruzioni.-->
 </p>
 {% next_button %}
 {% endblock %}
