--- a/_templates/global/Question.html
+++ b/_templates/global/Question.html
@@ -5,7 +5,7 @@
 {% if title %}
 {{ title }}
 {% else %}
-Understanding Question {{ num_q|default:1 }} of {{ total_q|default:1 }}
+Domande di comprensione {{ num_q|default:1 }} di {{ total_q|default:1 }}
 {% endif %}
 {% endblock %}
 
