--- a/_templates/global/Feedback.html
+++ b/_templates/global/Feedback.html
@@ -2,29 +2,29 @@
 {% load otree_tags %}
 
 {% block title %}
-Solution to Understanding Question {{ num_q|default:1 }} of {{ total_q|default:1 }}
+Soluzione alla domanda di comprensione {{ num_q|default:1 }} di {{ total_q|default:1 }}
 {% endblock %}
 
 {% block content %}
 {% for question, answer in answers.items|default:answers %}
 {% ifequal answer.0 answer.1 %}
 <p class="text-success">
-Your answer {{answer.0}} for {{question}} was correct.
+La tua risposta {{answer.0}} a {{question}} era corretta.
 </p>
 {% else %}
 <p class="text-danger">
-Your answer {{answer.0}} for {{question}} was incorrect.
+La tua risposta {{answer.0}} a {{question}} era sbagliata.
 </p>
 {% endifequal %}
 {% endfor %}
 {% if answer %}
 {% ifequal answer.0 answer.1 %}
 <p class="text-success">
-Your answer {{answer.0}} was correct.
+La tua risposta {{answer.0}} era corretta.
 </p>
 {% else %}
 <p class="text-danger">
-Your answer {{answer.0}} was incorrect.
+La tua risposta {{answer.0}} era sbagliata.
 </p>
 {% endifequal %}
 {% endif %}
