Corretti piccoli dettagli sul testo

--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -3,6 +3,6 @@
     <h4>Istruzioni</h4>
     {% block instructions %}{% endblock %}
     <p>
-    Per comodità queste istruzioni rimarranno disponibili in tutte le successive schermate.
+    Per comodità una sintesi di queste istruzioni rimarrà disponibile in tutte le successive schermate.
     </p>
 </div>
