2/11/2015. Vari cambiamenti importanti: - market: corretto il fatto che riformava i gruppi ogni volto e non solo in num_period==1 - public goods: cambiata la collocazione del matching in modo da non interferire con le altre app. Ora, come nelle altre è nella matchingWaitPage - implementato un dictator modificato (dictators_simultaneous) che accoppia in base al codice numerico kind: quelli con codice fino a 199 sono associati a quelli con codice da 200 in poi - modifiche minori a welcome_choice
DA FARE: ISTRUZIONI E DOMANDE DI CONTROLLO X MARKET E DICTATORS_SIMULTANEOUS - INVENTARE DA ERO L'APP SU RISK AVERSION

--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -1,8 +1,13 @@
 {% load otree_tags %}
+{% load i18n %}
 <div class="box effect7">
     <h4>Istruzioni</h4>
     {% block instructions %}{% endblock %}
+    {% blocktrans trimmed  %}
     <p>
-    Per comodità una sintesi di queste istruzioni rimarrà disponibile in tutte le successive schermate.
+    Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili in tutte le successive schermate.
     </p>
+    {% endblocktrans %}
 </div>
+<!-- Translates:-->
+<!--For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this study.-->
