--- a/_templates/global/Feedback.html
+++ b/_templates/global/Feedback.html
@@ -1,8 +1,11 @@
 {% extends "global/Base.html" %}
 {% load otree_tags %}
+{% load i18n %}
 
 {% block title %}
-Soluzione alla domanda di comprensione {{ num_q|default:1 }} di {{ total_q|default:1 }}
+{% blocktrans with num_q=num_q|default:1 total_q=total_q|default:1 %}
+Solution to Understanding Question {{ num_q }} di {{ total_q }}
+{% endblocktrans %}
 {% endblock %}
 
 {% block content %}
