Aggiornate traduzioni. Problema sulle traduzioni di _templates/global: le traduzioni vengono ignorate

--- a/_templates/global/ResultsTable.html
+++ b/_templates/global/ResultsTable.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Risultati" %}
+{% trans "Results" %}
 {% endblock %}
 {% block content %}
 <table class=table style='width: auto'>
