--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -5,9 +5,10 @@
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-    Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili in tutte le successive schermate.
+For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this study.
+
     </p>
     {% endblocktrans %}
 </div>
 <!-- Translates:-->
-<!--For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this study.-->
+<!--    Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili in tutte le successive schermate.-->
