Aggiunti break prima del form

--- a/_templates/global/Question.html
+++ b/_templates/global/Question.html
@@ -28,7 +28,7 @@ Understanding question {{ num_q }} of {{ total_q }}
 {% endif %}
 {# render <form> #}
 {% for field in form %}
-<p>{% formfield field %}</p>
+<br><br><p>{% formfield field %}</p>
 {% endfor %}
 
 <p>{% next_button %}</p>
