Piccole modifiche a traduzioni dei template e a settings.py

--- a/_templates/global/Question.html
+++ b/_templates/global/Question.html
@@ -8,7 +8,8 @@
 {% else %}
 
 {% blocktrans with num_q=num_q|default:1 total_q=total_q|default:1 %}
-Understanding question {{ num_q }} of {{ total_q }}
+Domanda di Comprensione {{ num_q }} di {{ total_q }}
+<!--Understanding question {{ num_q }} of {{ total_q }}-->
 {% endblocktrans %}
 
 {% endif %}
