--- a/_templates/global/Feedback.html
+++ b/_templates/global/Feedback.html
@@ -4,7 +4,8 @@
 
 {% block title %}
 {% blocktrans with num_q=num_q|default:1 total_q=total_q|default:1 %}
-Solution to Understanding Question {{ num_q }} of {{ total_q }}
+<!--Solution to Understanding Question {{ num_q }} of {{ total_q }}-->
+Soluzione alla Domanda di comprensione {{ num_q }} di {{ total_q }}
 {% endblocktrans %}
 {% endblock %}
 
