--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -1,11 +1,11 @@
 {% load otree_tags %}
 {% load i18n %}
 <div class="box effect7">
-    <h4>Istruzioni</h4>
+    <h4>{%trans "Instructions" %}</h4>
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili in tutte le successive schermate.
+For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this activity.
     </p>
     {% endblocktrans %}
 </div>
