Correzioni e sistemazioni varie in vista del trattamento informato

--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -5,10 +5,10 @@
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this activity.
+Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili in tutte le successive schermate.
     </p>
     {% endblocktrans %}
 </div>
 <!-- Translates:-->
 <!--
-        For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this study.-->
+        For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this activity.-->
