Preparata la versione inglese di tutto l'esperimento. Semplificate e modificate le sessioni disponibili, con le conversioni appropriate degli incentivi

--- a/_templates/global/Base.html
+++ b/_templates/global/Base.html
@@ -1,7 +1,7 @@
 {% extends "otree/FormPage.html" %}
 
 {% load staticfiles otree_tags %}
-
+{% load i18n %}
 
 {% block global_styles  %}
     <link rel="stylesheet" type="text/css" href="{% static 'global/custom.css' %}" />
