--- a/_templates/global/QuestionIt.html
+++ b/_templates/global/QuestionIt.html
@@ -9,7 +9,7 @@
 
 {% blocktrans with num_q=num_q|default:1 total_q=total_q|default:1 %}
 
-Understanding Question {{ num_q }} of {{ total_q }}
+Domanda di Comprensione {{ num_q }} di {{ total_q }}
 {% endblocktrans %}
 
 {% endif %}
@@ -35,3 +35,5 @@ Understanding Question {{ num_q }} of {{ total_q }}
 <p>{% next_button %}</p>
 {% include instructions %}
 {% endblock %}
+
+ <!--Understanding Question {{ num_q }} of {{ total_q }}-->
