Cambiamenti alla versione inglese suggeriti da Glasgow

--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -5,7 +5,7 @@
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-For your convenience, these instructions (or a short version of them) will remain available to you on all subsequent screens of this activity.
+For your convenience, these instructions (or a shorter version of them) will remain available to you on all subsequent screens for this activity.
     </p>
     {% endblocktrans %}
 </div>
