Cambiamenti in vista della sessione studenti italiani di fine maggio 2016 (reverted from commit 481b27d3a64dc72712ecfb0c095d8ce13eec4e5e)

--- a/_templates/global/Feedback.html
+++ b/_templates/global/Feedback.html
@@ -5,7 +5,7 @@
 {% block title %}
 {% blocktrans with num_q=num_q|default:1 total_q=total_q|default:1 %}
 
-Soluzione alla Domanda di comprensione {{ num_q }} di {{ total_q }}
+Solution to Understanding Question {{ num_q }} of {{ total_q }}
 {% endblocktrans %}
 {% endblock %}
 <!--Solution to Understanding Question {{ num_q }} of {{ total_q }}-->
@@ -13,22 +13,22 @@ Soluzione alla Domanda di comprensione {{ num_q }} di {{ total_q }}
 {% for question, answer in answers.items|default:answers %}
 {% ifequal answer.0 answer.1 %}
 <p class="text-success">
-La tua risposta {{answer.0}} a {{question}} era corretta.
+Your answer {{answer.0}} to {{question}} was correct.
 </p>
 {% else %}
 <p class="text-danger">
-La tua risposta {{answer.0}} a {{question}} era sbagliata.
+Your answer {{answer.0}} to {{question}} was incorrect.
 </p>
 {% endifequal %}
 {% endfor %}
 {% if answer %}
 {% ifequal answer.0 answer.1 %}
 <p class="text-success">
-La tua risposta {{answer.0}} era corretta.
+Your answer {{answer.0}} was correct.
 </p>
 {% else %}
 <p class="text-danger">
-La tua risposta {{answer.0}} era sbagliata.
+Your answer {{answer.0}} was incorrect.
 </p>
 {% endifequal %}
 {% endif %}
