--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -1,11 +1,11 @@
 {% load otree_tags %}
 {% load i18n %}
 <div class="box effect7">
-    <h4>{%trans "Istruzioni" %}</h4>
+    <h4>{%trans "Instructions" %}</h4>
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-Per comodità queste istruzioni (o una loro sintesti) rimarranno disponibili in tutte le schermate di questa attività.
+For your convenience, these instructions (or a shorter version of them) will remain available to you on all subsequent screens for this activity.
     </p>
     {% endblocktrans %}
 </div>
