--- a/_templates/global/Short_Instructions.html
+++ b/_templates/global/Short_Instructions.html
@@ -1,12 +1,11 @@
 {% load otree_tags %}
 {% load i18n %}
 <div class="box effect7">
-    <h4>{%trans "Sintesi delle Istruzioni" %}</h4>
+    <h4>{%trans "Short Instructions" %}</h4>
     {% block short_instructions %}{% endblock %}
     <p>
 
-        {%trans "Per comodità queste istruzioni rimarranno disponibili in tutte le successive schermate." %}
+        {%trans "For your convenience these instructions will remain available to you on all subsequent screens of this activity." %}
     </p>
 </div>
 
-<!--{%trans "Short Instructions" %}{%trans "For your convenience these instructions will remain available to you on all subsequent screens of this activity." %}-->
