settings in italiano - 11

--- a/_templates/global/Instructions.html
+++ b/_templates/global/Instructions.html
@@ -5,7 +5,7 @@
     {% block instructions %}{% endblock %}
     {% blocktrans trimmed  %}
     <p>
-Per comodità queste istruzioni (o una loro sintesti) rimarranno disponibili in tutte le schermate di questa attività.
+Per comodità queste istruzioni (o una loro sintesi) rimarranno disponibili in tutte le schermate di questa attività.
     </p>
     {% endblocktrans %}
 </div>
